--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,7 +31,7 @@ button {
   width: 490px;
   display: flex;
   justify-content: center;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 70px 80px 0px;
 
   h1 {
     position: absolute;
@@ -191,4 +191,34 @@ input[type="number"] {
   transform: translateX(-10px);
 
   //   background-color: blue;
+}
+
+@media screen and (max-width: 500px) {
+  * {
+    transform: scale(0.95);
+  }
+  .calc-container {
+    transform: scale(1);
+  }
+  .outer-container {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 70px 80px 0px;
+  }
+  #input {
+    transform: scale(1);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  * {
+    transform: scale(0.9);
+  }
+  .calc-container {
+    transform: scale(1);
+  }
+  .outer-container {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 70px 80px 0px;
+  }
+  #input {
+    transform: scale(1);
+  }
 }
